# conferencing-app

./: .gitignore  CMakeLists.txt  Client.cpp  PracticalSocket.cpp  PracticalSocket.h  README.md  Server.cpp  audioworker.h  config.h  cvmatandqimage.cpp  cvmatandqimage.h  imageutil.h  mainwindow.h  resources.qrc  screenrecorder.cpp  screenrecorder.h  settingswindow.h  startwindow.h  streaming.pro  udpplayer.cpp  udpplayer.h  workerthread.h  zoomui.h
documents/: Блок схема 1.vsd  Блок схема 2.vsd  Ведомость документов.vsd  Диаграмма классов А3.vsdx  ТЗ.docx  пояснительная.docx
